--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,7 +7,9 @@
 	"name": "example-vite-react-spa-wk",
 	"main": "worker/index.ts",
 	"compatibility_date": "2025-05-06",
+	"preview_urls": false,
 	"assets": {
+		"directory": "./dist/",
 		"not_found_handling": "single-page-application"
 	},
 	"observability": {
