--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "eslint .",
+		"lint": "oxlint",
 		"preview": "pnpm run build && vite preview",
 		"deploy": "pnpm run build && wrangler deploy",
 		"cf-typegen": "wrangler types"
@@ -23,16 +23,11 @@
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.1.0",
 		"@cloudflare/workers-types": "4.20250506.0",
-		"@eslint/js": "9.26.0",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react-swc": "3.9.0",
-		"eslint": "9.26.0",
-		"eslint-plugin-react-hooks": "5.2.0",
-		"eslint-plugin-react-refresh": "0.4.20",
-		"globals": "16.0.0",
+		"oxlint": "^1.23.0",
 		"typescript": "5.7.3",
-		"typescript-eslint": "8.32.0",
 		"vite": "^6.3.1",
 		"wrangler": "4.14.1"
 	}
