--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
           version: 8
       - name: Install
         run: pnpm install
+      - name: Lint
+        run: pnpm run lint
       - name: Deploy
         run: pnpm run deploy
         env:
