--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,8 @@ jobs:
         run: pnpm install
       - name: Lint
         run: pnpm run lint
+      - name: Test
+        run: pnpm test --run
       - name: Deploy
         run: pnpm run deploy
         env:
