Fix CI test command syntax error

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Lint
         run: pnpm run lint
       - name: Test
-        run: pnpm test --run
+        run: pnpm run test run
       - name: Deploy
         run: pnpm run deploy
         env:
